<resources>
    <string name="app_name">ClearVision</string>
    <string name="please_provide_camera_permission_to_continue">Please provide camera permission to continue.</string>
    <string name="name">Name</string>
    <string name="doctor_name">Doctor name</string>
    <string name="medicine_name">Medicine name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry date</string>
    <string name="at_morning">At morning</string>
    <string name="at_noon">At noon</string>
    <string name="at_night">At night</string>
    <string name="no_of_days">Number of days</string>
    <string name="scan_qr">Scan QR</string>
    <string name="locate_me">Locate me</string>
    <string name="take_medicine">Take medicine</string>
</resources>