<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:importantForAccessibility="no"
    android:orientation="vertical"
    android:padding="12dp"
    android:weightSum="100"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11" />

    <Button
        android:id="@+id/btnScanQR"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="22"
        android:background="@drawable/ic_shape_locate"
        android:text="@string/scan_qr"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11" />

    <Button
        android:id="@+id/btnLocateMe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="22"
        android:background="@drawable/ic_shape_locate"
        android:text="@string/locate_me"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11" />

    <Button
        android:id="@+id/btnTakeMedicine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="22"
        android:background="@drawable/ic_shape_locate"
        android:text="@string/take_medicine"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_provide_camera_permission_to_continue"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>